<resources>
    <string name="app_name">Товары и Услуги</string>
    <string name="home">Главная</string>
    <string name="chats">Чаты</string>
    <string name="chat">Чаты</string>
    <string name="notification">Уведомления</string>
    <string name="profile">Профиль</string>
    <string name="username">Имя пользователя</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="surname">Отчество</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="login">Войти</string>
    <string name="auth">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="date_auth">Данные входа</string>
    <string name="fio_avt">ФИО и аватарка</string>
    <string name="registration">Зарегистрироватся</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="settings">Параметры</string>
    <string name="my_ads">Мои объявления</string>
    <string name="advert_name">Объявление</string>
    <string name="main_data">Основные данные</string>
    <string name="city">Город</string>
    <string name="create_ad">Создание объявления</string>
    <string name="title_ad">Название объявления</string>
    <string name="description_ad">Описание объявления</string>
    <string name="price">Цена</string>
    <string name="add_image">Добавить изображения</string>
    <string name="input_messages">Введите сообщение</string>
    <string name="active_adverts">Активные объявлений</string>
    <string name="announcement_archive">Архив объявлений</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="ToArchive">Архивировать</string>
    <string name="DeArchive">Разархивировать</string>
    <string name="GetAllImages">Просмотреть все фотографии</string>
    <string name="AllImages">Все фотографии</string>
    <string name="empty">Пусто</string>
</resources>
