<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/main_data"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/avatar"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/stream_ui_ic_file_manager"
                            tools:ignore="ImageContrastCheck" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/black"
                            app:boxCornerRadiusBottomEnd="15dp"
                            app:boxCornerRadiusBottomStart="15dp"
                            app:boxCornerRadiusTopEnd="15dp"
                            app:boxCornerRadiusTopStart="15dp"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:hint="@string/first_name"
                                android:textSize="13sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/last_name"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/surname"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/city"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/date_auth"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/username"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/email"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_repeat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/password_repeat"
                            android:inputType="textPassword"
                            android:textSize="13sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/registration"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>